# raise-mbtools

./: .gitignore  README.md  output.csv  setup.cfg  toc.csv  toc.md
.github/workflows/: tests.yml
html/: html.html
mbtools/: copy_resources_s3.py  correct_variant_ib_uuids.py  extract_html_content.py  fetch_im_resources.py  fetch_openstax_pages.py  fix_html.py  generate_html_content_data.py  generate_imra_toc.py  generate_mbz_toc.py  generate_quiz_csv.py  html_content_extractor.py  html_tag_insertion.py  html_to_json.py  index_template.html  inject_ib_ids.py  inject_ib_uuids.py  inject_uuids.py  inject_uuids_quiz.py  models.py  patch_imra_links.py  patch_pset_retry_limits.py  patch_video_iframe_styles.py  prune_mbz_questionbank.py  remove_styles.py  replace_im_links.py  utils.py  validate_mbz_html.py
tests/: conftest.py  test_copy_resources_s3.py  test_correct_variant_ib_uuids.py  test_extract_html_content.py  test_fetch_im_resources.py  test_fetch_os_pages.py  test_fix_html.py  test_generate_html_content_data.py  test_generate_mbz_toc.py  test_generate_quiz_csv.py  test_html_content_extractor.py  test_html_tag_replacement.py  test_html_to_json.py  test_inject_ib_ids.py  test_inject_ib_uuids.py  test_inject_quiz_uuids.py  test_inject_uuids.py  test_models.py  test_patch_pset_retry_limits.py  test_patch_video_iframe_styles.py  test_prune_mbz_questionbank.py  test_remove_styles.py  test_replace_im_links.py  test_resource_upload.py  test_utils.py  test_validate.py
tests/data/correct_variant_ib_uuids/: variant.html  variant_out.html
tests/data/generate_html_content_data/: 4ca6ab6d-231e-4000-b576-af7f3c021cf5.html  ib_input_instances_expected.csv  ib_pset_problems_expected.csv
tests/data/generate_html_content_data/4ca6ab6d-231e-4000-b576-af7f3c021cf5/: mm.html
tests/data/inject_ib_uuid_test_data/: mix_in.html  pset_in.html  single_input_in.html  single_input_out.html  single_input_variant_in.html  single_input_variant_out.html
tests/data/inject_ib_uuids/: mix_in.html  mix_out.html  pset_in.html  pset_out.html  single_input_in.html  single_input_variant_in.html
tests/data/validate_mbz_html/: questions.xml
