[metadata]
name = raise-mbtools
version = 0.0.1

[options]
packages = mbtools
install_requires =
    lxml==4.9.2
    beautifulsoup4==4.11.1
    boto3==1.26.49
    python-magic==0.4.27
    requests==2.28.2

[options.extras_require]
test =
    flake8
    pytest
    pytest-cov
    pytest-mock
    requests-mock

[options.entry_points]
console_scripts =
    copy-resources-s3 = mbtools.copy_resources_s3:main
    fetch-os-pages = mbtools.fetch_openstax_pages:main
    validate-mbz-html = mbtools.validate_mbz_html:main
    remove-styles = mbtools.remove_styles:main
    extract-html-contents = mbtools.extract_html_content:main
    html-to-json = mbtools.html_to_json:main
    prune-mbz-questionbank = mbtools.prune_mbz_questionbank:main
    fetch-im-resources = mbtools.fetch_im_resources:main
    replace-im-links = mbtools.replace_im_links:main
    generate-mbz-toc = mbtools.generate_mbz_toc:main
    fix-html = mbtools.fix_html:main
    generate-quiz-csv = mbtools.generate_quiz_csv:main
