[metadata]
name = raise-mbtools
version = 0.0.1

[options]
packages = mbtools
install_requires =
    lxml==5.2.1
    beautifulsoup4==4.12.3
    boto3==1.34.95
    python-magic==0.4.27
    requests==2.31.0
    jinja2==3.1.3

[options.extras_require]
test =
    flake8
    pytest
    pytest-cov
    pytest-mock
    requests-mock

[options.package_data]
mbtools =
    *.html

[options.entry_points]
console_scripts =
    copy-resources-s3 = mbtools.copy_resources_s3:main
    fetch-os-pages = mbtools.fetch_openstax_pages:main
    validate-mbz-html = mbtools.validate_mbz_html:main
    remove-styles = mbtools.remove_styles:main
    extract-html-contents = mbtools.extract_html_content:main
    html-to-json = mbtools.html_to_json:main
    prune-mbz-questionbank = mbtools.prune_mbz_questionbank:main
    fetch-im-resources = mbtools.fetch_im_resources:main
    replace-im-links = mbtools.replace_im_links:main
    generate-mbz-toc = mbtools.generate_mbz_toc:main
    fix-html = mbtools.fix_html:main
    inject-quiz-uuids= mbtools.inject_quiz_uuids:main
    generate-quiz-csv = mbtools.generate_quiz_csv:main
    inject-ib-uuids = mbtools.inject_ib_uuids:main
    correct-variant-ib-uuids = mbtools.correct_variant_ib_uuids:main
    generate-html-content-data = mbtools.generate_html_content_data:main
    patch-pset-retry-limits = mbtools.patch_pset_retry_limits:main